# rugby

./: .gitignore  LICENSE  README.md  index.html  rugby_web-526c8bb215cd6845.js  sw.js
.github/workflows/: pages.yml
dissasembler/: Cargo.toml
docs/: index.html  rugby_web-a38612fcd82f01c9.js  rugby_web-a38612fcd82f01c9_bg.wasm
gb_core/: Cargo.toml
gb_core/src/: apu.rs  bus.rs  cartridge.rs  color.rs  cpu.rs  emulator.rs  input.rs  lib.rs  main.rs  mmu.rs  ppu.rs  save_state.rs  timer.rs
gb_core/src/apu/: channels.rs
gb_core/src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  romonly.rs
gb_core/src/cpu/: instructions.rs  opcodes.rs
gb_desktop/: Cargo.toml  config.toml
gb_desktop/src/: app.rs  config_builder.rs  input_driver.rs  main.rs  video_driver.rs
rugby_core/: Cargo.toml
rugby_core/src/: bus.rs  cartridge.rs  color.rs  cpu.rs  emulator.rs  gb_mode.rs  input.rs  main.rs  mmu.rs  ppu.rs  save_state.rs
rugby_core/src/apu/: channels.rs
rugby_core/src/cartridge/: mbc1.rs  mbc2.rs  mbc5.rs  romonly.rs
rugby_core/src/cpu/: opcodes.rs
rugby_desktop/: Cargo.toml
rugby_desktop/src/: app.rs  config_builder.rs  main.rs
rugby_web/: Cargo.toml  config.toml  index.html
rugby_web/src/: app.rs  config_builder.rs  main.rs
