[package]
name = "gb_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb_core = {path = "../gb_core"}
config = "0.13"
spin_sleep = ">=1.1"
sdl2 = { version = ">=0.35", features = ["raw-window-handle"]}
eframe = "0.24"
egui = "0.18"

rfd = "0.12"
pollster = "0.2"
winit = "0.26.0"
