[package]
name = "rugby_desktop"
version = "1.1.0"
edition = "2021"

[dependencies]
rugby_core = {path = "../rugby_core"}
config = "0.13"
sdl2 = { version = ">=0.35"}
eframe = { version = ">=0.24", features = ["persistence"] }
egui = "0.18"

rfd = "0.12"
pollster = "0.2"
winit = "0.26.0"

[features]
debug = ["rugby_core/debug"]
rewind = ["rugby_core/rewind"]
