[package]
name = "rugby_web"
version = "1.0.0"
edition = "2021"

[dependencies]
rugby_core = {path = "../rugby_core"}
config = "0.13"
rodio = { version = "0.17", default-features = false, features = ["wasm-bindgen"] }
spin_sleep = ">=1.1"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.18"

rfd = "0.12"
pollster = "0.2"
winit = "0.26.0"

# Web
log = "0.4"
reqwest = "0.11"
wasm-bindgen-futures = "0.4"
